# Open-Truth-Protocol

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .swarm.yml  AGENTS.md  ALGORITHMS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASETS.md  INDEX.md  LICENSE  Makefile  PR_TEMPLATE_PHASE1.md  README.md  RESEARCH_ROADMAP.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  START.md  STATUS.md  action.yml  docker-compose.yml  package-lock.json  package.json  pr_body.txt  pyproject.toml  requirements.txt  skills-lock.json  tsconfig.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  implementation-task.md  security-vulnerability.md
.github/project/: BACKLOG.md
.github/workflows/: bandit.yml  cflite_batch.yml  cflite_pr.yml  ci.yml  codeql.yml  dependency-review.yml  example.yml  greetings.yml  label.yml  pyre.yml  scorecard.yml  stale.yml
agents/: __init__.py
agents/cli/: main.py
agents/heuristics/: Dockerfile  __init__.py  analyzer.py  main.py
agents/orchestrator/: Dockerfile  activities.py  main.py  service.py  workflow.py
agents/provenance/: Dockerfile  __init__.py  analyzer.py  main.py
agents/web_consensus/: Dockerfile  __init__.py  analyzer.py  main.py
config/: .env.example
docker/: docker-compose.infra.yml
docs/: GITHUB_ISSUES_ROADMAP.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  PHASE1_PROGRESS_REPORT.md
eval/: benchmark.py
scratch/: open_alerts.json  validate_yaml.py
shared/: __init__.py  constants.py  dedupe.py  env.py  errors.py  kafka_client.py  ledger.py  observability.py  routing.py  schemas.py  scorer.py
src/: config.ts  diff.ts  format.ts  github.ts  index.ts  llm.ts  prompts.ts  providers.ts  static_analysis.ts  types.ts
src/agents/: debate.ts  principal.ts  review.ts  shared.ts
src/tests/: agents.debate.test.ts  agents.principal.test.ts  agents.review.test.ts  agents.shared.test.ts  config.test.ts  diff.test.ts  format.test.ts  github.test.ts  index.ts  llm.test.ts  prompts.test.ts  static_analysis.test.ts
tests/fuzz/: test_schemas_fuzz.py
tests/unit/: test_agents_processing.py  test_dedupe.py  test_heuristics_analyzer.py  test_ledger.py  test_orchestrator_activities.py  test_orchestrator_service.py  test_provenance_analyzer.py  test_routing.py  test_schemas.py  test_scorer.py  test_web_consensus_analyzer.py
