[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "shared"]

[tool.hatch.build.targets.sdist]
include = [
  "agents",
  "shared",
  "tests",
  "README.md",
  "AGENTS.md",
  "CONTRIBUTING.md",
  "pyproject.toml",
]

[project]
name = "opentruthprotocol"
version = "0.1.0"
description = "Open Truth Protocol core services"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Open Truth Protocol Contributors" }]
dependencies = [
  "aiokafka>=0.11.0,<0.14.0",
  "boto3>=1.35.0,<2.0.0",
  "cachetools>=5.5.0",
  "fastapi>=0.117.0",
  "httpx>=0.27.0,<0.28.0",
  "prometheus-client>=0.21.0,<0.26.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "redis>=5.1.0,<6.0.0",
  "starlette>=0.49.1,<1.1.0",
  "structlog>=24.4.0,<26.0.0",
  "temporalio>=1.9.0,<2.0.0",
  "uvicorn[standard]>=0.34.0,<0.45.0",
  "types-cachetools>=5.5.0",
]

[project.scripts]
otp-verify = "agents.cli.main:main"
otp-benchmark = "eval.benchmark:main"

[project.optional-dependencies]
dev = [
  "atheris>=2.3.0",
  "mypy>=1.13.0,<2.0.0",
  "pre-commit>=4.0.1,<5.0.0",
  "pytest>=9.0.3,<10.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.7.0,<0.8.0",
]

[dependency-groups]
dev = [
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=agents --cov=shared --cov-report=term-missing --cov-fail-under=45"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".agents", ".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
exclude = ["^\\.agents/"]

[[tool.mypy.overrides]]
module = ["aiokafka.*", "temporalio.*"]
ignore_missing_imports = true
