[project]
name = "opentruthprotocol"
version = "0.1.0"
description = "Open Truth Protocol: 100% Accuracy AI-Generated Text Detection"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Open Truth Protocol Contributors" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0,<2.0.0",
  "pre-commit>=4.0.1,<5.0.0",
  "pytest>=9.0.3,<10.0.0",
  "ruff>=0.7.0,<0.16.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = []

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
exclude = ["^\\.venv/", "^\\.git/"]
